# Manatan

./: .gitignore  .public-release-stamp  Cargo.toml  Dockerfile  Makefile  README.md  changelog.txt  docker-compose.yml
.github/: .public-release-stamp
.github/workflows/: android_publish.yml  docker.yml  flatpak-repository.yml  publish.yml
WebUI/: .public-release-stamp
WebUI/src/: index.css
WebUI/src/Manatan/: types.ts
WebUI/src/Manatan/components/: DictionaryManager.tsx  DictionaryView.tsx  ImageOverlay.tsx  Pronunciation.tsx  SettingsModal.tsx  TextBox.tsx  YomitanPopup.tsx
WebUI/src/Manatan/utils/: anki.ts  api.ts  contextMenuTrigger.ts  cropper.ts  lookupTrigger.ts
crates/: .public-release-stamp
crates/anki-server/src/: lib.rs
crates/core/: Cargo.toml
crates/ln-server/: Cargo.toml
crates/ln-server/src/: error.rs  lib.rs  state.rs
crates/ocr-server/src/: handlers.rs  jobs.rs  lib.rs  logic.rs  state.rs
crates/stats-server/: Cargo.toml
crates/stats-server/src/: handlers.rs  lib.rs  sessions.rs  state.rs
crates/sync-server/src/: lib.rs  state.rs  types.rs
crates/yomitan-server/: Cargo.toml
crates/yomitan-server/src/: handlers.rs  import.rs  lib.rs  lookup.rs  state.rs
docs/: .public-release-stamp
packaging/: .public-release-stamp
packaging/flatpak/: .gitignore  README.md  flathub.json  io.github.kolbyml.Manatan.desktop  io.github.kolbyml.Manatan.metainfo.xml  io.github.kolbyml.Manatan.yml  manatan-flatpak.gpg  manatan-flatpak.sh  render_release_metadata.py  render_repository_files.py  site-index.html  update_release.py  validate.py
(+47 files in other folders)
