[package]
name = "mangatan-stats-server"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
